add Tailwind CSS classes instead of vanilla CSS 2

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@
 
     .input {
         @apply 
-            px-2 py-1 border rounded-sm
+            px-2 py-1 border rounded-sm text-sm
     }
 }
