add Tailwind CSS classes instead of vanilla CSS 4

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+/* https://youtu.be/TrftauE2Vyk?t=304 */
+
 @layer components {
     .btn {
         @apply
             px-2 py-1 border rounded-sm
-            bg-gray-200 text-gray-900 border-gray-500;
-    }
-
-    .btn:hover {
-        @apply bg-gray-300
+            bg-gray-200 text-gray-900 border-gray-500
+            hover:bg-gray-300
+            focus:outline-none
+            active:scale-105
+            transform
+            select-none
     }
 
     .input {
