--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,34 @@
 
 @layer components {
     .btn {
-        @apply
-            px-2 py-1 border rounded-sm
+        @apply px-2 py-1 border rounded-sm
             bg-gray-200 text-gray-900 border-gray-500
             hover:bg-gray-300
             focus:outline-none
             active:scale-105
             transform
-            select-none
+            select-none;
     }
 
     .input {
-        @apply 
-            px-2 py-1 border rounded-sm text-sm
+        @apply px-2 py-1 border rounded-sm text-sm;
+    }
+
+    /* Firefox scrollbars */
+    .smallscroll {
+        --sb-width: 6px;
+        scrollbar-color: #666b7a transparent;
+        scrollbar-width: thin;
+    }
+
+    /* Chrome scrollbars */
+    .smallscroll::-webkit-scrollbar {
+        width: var(--sb-width);
+        height: var(--sb-width);
+        background-color: transparent;
+    }
+
+    .smallscroll::-webkit-scrollbar-thumb {
+        background-color: #666b7a;
     }
 }
