--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,23 @@
 
 @layer components {
     .btn {
-        @apply px-2 py-1 border rounded-sm
+        @apply px-2 py-1
+            text-sm leading-normal
+            border rounded-sm
             bg-gray-200 text-gray-900 border-gray-500
             hover:bg-gray-300
             focus:outline-none
             active:scale-105
             transform
+            focus:ring-offset-2
+            focus:ring-2
             select-none;
     }
 
     .input {
-        @apply px-2 py-1 border rounded-sm text-sm;
+        @apply px-2 py-2
+            text-sm
+            border rounded-sm;
     }
 
     /* Firefox scrollbars */
