--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,13 @@
             border rounded-sm
             bg-gray-200 text-gray-900 border-gray-500
             hover:bg-gray-300
-            focus:outline-none
-            active:scale-105
             transform
-            focus:ring-offset-2
+            active:scale-105
+            focus:outline-none
+            focus:ring-offset-1
             focus:ring-2
-            select-none;
+            select-none
+            ring-purple-600 ring-offset-gray-200
     }
 
     .input {
